fixed all alignments for nav/left container icons

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -129,7 +129,6 @@ li {
 		margin: 0;
 		padding: 0 4px 0 4px;
 		box-sizing: border-box;
-		overflow-y: scroll;
 	}
 }
 
@@ -149,7 +148,7 @@ li {
 		width: 100%;
 		//height: 582px;
 		//border: 0.1px solid blue;
-		margin: 0;
+		margin: 0 0 4px 0;
 		padding: 0;
 	}
 
@@ -187,7 +186,7 @@ li {
 		@media only screen and (500px<=width<=688px) {
 			display: flex;
 			width: 50px;
-			height:30px;
+			height: 30px;
 			//line-height: 20px;
 			border-radius: 0;
 			padding: 0;
@@ -225,12 +224,10 @@ li {
 		width: 100%;
 		height: 100%;
 
-
 		@media only screen and (500px<=width<=688px) {
 			height: 50.25px;
 			padding: 4px;
 			margin-top: 0;
-
 		}
 	}
 
@@ -270,8 +267,73 @@ button:hover {
 	background-color: #1d8ad3;
 }
 
-#profile-pill-container {
+.tweet-btn-wrapper{
+	//background-color: green;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	//border:1px solid green;
+	height:52px;
+	width:52px;
+	min-height: 52px;
+	min-height: 52px;
+	aspect-ratio: 1/1;
+	margin:4px 0 4px 4px ;
+	padding: 0;
+	box-sizing: border-box;
+	background-color: rgb(29, 155, 240);
+	border-radius: 50%;
+}
+
+.write-tweet-icon{
+
+	 width: 24px;
+	 height: 24px;
+	margin: 0;
+	padding: 0;
+	fill: white;
+
+}
+
+.profile-container {
 	display: none;
+	box-sizing: border-box;
+
+	@media only screen and (500px<=width<=688px) {
+		display: flex;
+		height: 64px;
+		width: 64px;
+		//padding: 4px;
+		padding: 0 0 0 0;
+		margin:12px 2px 12px -2px;
+		&_profile-pill{
+			height: 100%;
+			width: 100%;
+			padding: 12px ;
+			//justify-self: center;
+			box-sizing: border-box;
+
+		}
+		img{
+			display:flex;
+			width: 100%;
+			height: 100%;
+			//aspect-ratio: 1/1;
+			border-radius: 50%;
+
+		}
+
+		span{
+			display: none;
+		}
+
+		&_user-info{
+			display: none;
+		}
+	}
+
+
 }
 
 #profile-pill:hover {
